1. Add threshold times of blessing 2. Add api of count blesses of a star

--- a/server.api/src/main/resources/application.properties
+++ b/server.api/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-## chain restful url
+## service url
 #blockagent.prefix      = https://api-wallet-did-testnet.elastos.org
-blockagent.prefix      = http://localhost:8094
+elaservice.blockAgentPrefix      = https://api-wallet-did-testnet.elastos.org
+elaservice.didExplorerPrefix     = http://sidebackend-testnet.bbjb2qwn2i.ap-northeast-1.elasticbeanstalk.com
+
+##Threshold
+threshold.userThreshold = 5
 
 ## API Access Key
 accesskey.id  = unCZRceA8o7dbny
