Add auth header for login

--- a/server.api/src/main/resources/application.properties
+++ b/server.api/src/main/resources/application.properties
@@ -42,6 +42,17 @@ server.tomcat.accesslog.pattern=%{yyyyMMddHHmmssSSS}t|%a|%h|%H|%r|%{Referer}i|%s
 server.connection-timeout=60000
 server.servlet.session.timeout= 1800
 
+## redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
+spring.redis.timeout=10000
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+
 
 ## data source primary
 spring.datasource.url=jdbc:mariadb://localhost:3306/association_record?useUnicode=true&characterEncoding=UTF-8&useSSL=false
