1. change explorer url

--- a/server.api/src/main/resources/application.properties
+++ b/server.api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## service url
 #blockagent.prefix      = https://api-wallet-did-testnet.elastos.org
 elaservice.blockAgentPrefix      = https://api-wallet-did.elastos.org
-elaservice.didExplorerUrl     = https://idchain.elastos.org
+elaservice.didExplorerUrl     =  https://explorer.elaphant.app
 
 ##Threshold
 threshold.userThreshold = 5
